--- a/docs/常用命令行.md
+++ b/docs/常用命令行.md
@@ -1,6 +1,6 @@
 获取当前文件夹下代码行数
 ```shell
-* find . "(" -name "*.m" -or -name "*.mm" -or -name "*.h" -or -name "*.swift" ")" -print | xargs wc -l
+find . "(" -name "*.m" -or -name "*.mm" -or -name "*.h" -or -name "*.swift" ")" -print | xargs wc -l
 ```
 
 获取 iOS 打包后的 Asserts.car 信息，用来检查文件格式
